# easyloggingpp

./: .gitignore
mytest/: CMakeLists.txt  main.cpp
